fixed promoted badge overflow in cart-items preview

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ html, body {
 }
 
 .item-preview {
-    width: 100%;
+    width: 320px;
     height: 100px;
     display: flex;
     padding: 18px 8px 18px 10px;
@@ -117,21 +117,27 @@ html, body {
     margin-left: 15px;
 }
 
+.cart-preview-wrapper {
+    position: sticky;
+    margin-right: 22px;
+    border-radius: 10px;
+}
+
 .cart-preview {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     min-width: 320px;
     height: 530px;
-    background-color: #fff;
-    position: sticky;
     top: 160px;
     bottom: 0px;
-    margin-right: 22px;
 }
 
 .cart-items-preview-wrapper {
+    padding-right: 11px;
+    background-image: linear-gradient(to right, white 97%, transparent 3%);
     height: 330px;
     bottom: 0px;
     overflow-y: auto;
+    overflow-x: hidden;
+    margin-right: -11px;
 }
 
 .cart-preview-header {
@@ -306,7 +312,7 @@ html, body {
 }
 
 .cart-preview-footer {
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
     width: 100%;
     height: 100px;
@@ -1703,7 +1709,7 @@ button.btn-disabled {
         width: 54px;
         height: 18px;
         font-weight: 300;
-        right: -6px;
+        right: -14px;
         top: 8px;
     }
 
